[package]
name = "threading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.82"
solana-sdk = "1.11.3"
serde      = "1.0.139"
bs58       = "0.4.0"
itertools  = "0.10.3"
rusqlite   = "0.28.0"



[[bin]]
name="sqlitetest"
path="src/sqlite_tools.rs"